<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <androidx.cardview.widget.CardView
        android:layout_width="312dp"
        android:layout_height="130dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" >

        <TextView
            android:id="@+id/text_View"
            android:layout_width="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#121212"
            android:text="@string/construmax" />

        <FrameLayout
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/building"
            android:layout_marginTop="31dp"
            android:layout_marginStart="230dp"
            />


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/start_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622" >

        <FrameLayout
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/arrow"
            android:layout_gravity="center"
            />

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:cardBackgroundColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organizador_de_obras_inteligente"
            android:layout_marginTop="12dp"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:textColor="#121212"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lucas_mattos_amorim_rm88633"
            android:layout_marginTop="42dp"
            android:textSize="12sp"
            android:layout_marginStart="20dp"
            android:textColor="#121212"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carlos_victor_silveira_de_aragon_junior_rm87425"
            android:layout_marginTop="65dp"
            android:textSize="12sp"
            android:layout_marginStart="20dp"
            android:textColor="#121212"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lucas_amancio_galeazzo_rm86759"
            android:layout_marginTop="88dp"
            android:textSize="12sp"
            android:layout_marginStart="20dp"
            android:textColor="#121212"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pedro_henrique_nascimento_da_silva_rm86759"
            android:layout_marginTop="111dp"
            android:textSize="12sp"
            android:layout_marginStart="20dp"
            android:textColor="#121212"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>